--- a/MvcApplication3/Views/Shared/Site.Master
+++ b/MvcApplication3/Views/Shared/Site.Master
@@ -12,7 +12,7 @@
 
         <div id="header">
             <div id="title">
-                <h1>My MVC Application</h1>
+                <h1>Mongoose-wiki MVC Application</h1>
             </div>
               
             <div id="logindisplay">
